--- a/angular/index.html
+++ b/angular/index.html
@@ -5,6 +5,7 @@
 	<title>Angular</title>
 	<script type="text/javascript" src="js/static1.js"></script>
 	<script type="text/javascript" src="/app/js/static2.js"></script>
+	<script type="text/javascript" src="/javascripts/static3.js"></script>
 </head>
 <body>
 	Angular
