--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 	<script type="text/javascript" src="asset/js/angular-route/angular-route.min.js"></script>
 	<script type="text/javascript" src="app.module.js"></script>	
 	<script type="text/javascript" src="app.config.js"></script>
+	<script type="text/javascript" src="asset/js/controllers/FormController.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -33,25 +34,13 @@
 
 					<li><a href="#!/thuc-vat">Thực vật</a></li>
 				</ul>
-				<form class="navbar-form navbar-left" role="search">
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Search">
-					</div>
-					<button type="submit" class="btn btn-default">Submit</button>
-				</form>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#">Link</a></li>
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><a href="#">Action</a></li>
-							<li><a href="#">Another action</a></li>
-							<li><a href="#">Something else here</a></li>
-							<li><a href="#">Separated link</a></li>
-						</ul>
+						<a href="localhost:3000/auth/logout" class="">Logout</a>
 					</li>
 				</ul>
-			</div><!-- /.navbar-collapse -->
+			</div>
 		</div>
 	</nav>
 	<div ng-view> </div>
