--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#">Link</a></li>
 					<li class="dropdown">
-						<a href="localhost:3000/auth/logout" class="">Logout</a>
+						<a href="/auth/logout" class="">Logout</a>
 					</li>
 				</ul>
 			</div>
