--- a/app/index.html
+++ b/app/index.html
@@ -38,11 +38,15 @@
 					<li><a href="#!/tho-nhuong">Thổ nhưỡng</a></li>
 					<li><a href="#!/co-sinh">Cổ sinh</a></li>
 				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<li class="dropdown">
-						<a href="/auth/logout" class="">Logout</a>
-					</li>
-				</ul>
+			<ul class="nav navbar-nav navbar-right">
+				<li class="dropdown">
+					<a href="" class="dropdown-toggle" data-toggle="dropdown">Thêm<b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li><a href="">Quản lý bài đăng</a></li>
+						<li><a href="/auth/logout">Đăng xuất</a></li>
+					</ul>
+				</li>
+			</ul>
 			</div>
 		</div>
 	</nav>
