--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,15 @@
 	<title>Bao tang thien nhien</title>
 	<link rel="stylesheet" type="text/css" href="asset/css/bootstrap/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="asset/css/main.css">
+	<link rel="stylesheet" type="text/css" href="asset/css/jquery/jquery-ui.min.css">
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery.js"></script>
+	<script type="text/javascript" src="asset/js/jquery/jquery/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="asset/js/jquery/bootstrap.js"></script>
 	<script type="text/javascript" src="asset/js/angular/angular.js"></script>
 	<script type="text/javascript" src="asset/js/angular-route/angular-route.min.js"></script>
 	<script type="text/javascript" src="app.module.js"></script>
 	<script type="text/javascript" src="app.config.js"></script>
+	<script type="text/javascript" src="service.js"></script>
 	<script type="text/javascript" src="asset/js/controllers/FormController.js"></script>
 	<script type="text/javascript" src="asset/js/filter/placeFilter.js"></script>
 </head>
