--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,8 @@
 	<script type="text/javascript" src="app.config.js"></script>
 	<script type="text/javascript" src="service.js"></script>
 	<script type="text/javascript" src="asset/js/controllers/FormController.js"></script>
+	<script type="text/javascript" src="asset/js/controllers/EditFormController.js"></script>
+	<script type="text/javascript" src="asset/js/controllers/ManageController.js"></script>
 	<script type="text/javascript" src="asset/js/filter/placeFilter.js"></script>
 </head>
 <body>
@@ -45,7 +47,7 @@
 				<li class="dropdown">
 					<a href="" class="dropdown-toggle" data-toggle="dropdown">Thêm<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="">Quản lý bài đăng</a></li>
+						<li><a href="#!/bai-dang/dong-vat">Quản lý bài đăng</a></li>
 						<li><a href="/auth/logout">Đăng xuất</a></li>
 					</ul>
 				</li>
