--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
 	<script type="text/javascript" src="asset/js/controllers/EditFormController.js"></script>
 	<script type="text/javascript" src="asset/js/controllers/ManageController.js"></script>
 	<script type="text/javascript" src="asset/js/filter/placeFilter.js"></script>
+	<script type="text/javascript" src="asset/js/angular-messages/angular-messages.min.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -30,7 +31,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Trang chủ</a>
+				<a class="navbar-brand" href="/">Trang chủ</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
