--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="museumApp">
 <head>
 	<meta charset="UTF-8">
-	<title>Bao tang thien nhien</title>
+	<title>Bảo tàng thiên nhiên</title>
 	<link rel="stylesheet" type="text/css" href="asset/css/bootstrap/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="asset/css/main.css">
 	<link rel="stylesheet" type="text/css" href="asset/css/jquery/jquery-ui.min.css">
@@ -19,6 +19,7 @@
 	<script type="text/javascript" src="asset/js/controllers/ManageController.js"></script>
 	<script type="text/javascript" src="asset/js/filter/placeFilter.js"></script>
 	<script type="text/javascript" src="asset/js/angular-messages/angular-messages.min.js"></script>
+	<script type="text/javascript" src="asset/js/style.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -57,5 +58,8 @@
 		</div>
 	</nav>
 	<div ng-view> </div>
+	<footer style="bottom: 0px; position: absolute; width: 100%;">
+		<div class="input-form">@copyright. All right is reserved</div>
+	</footer>
 </body>
 </html>
