--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
 	<title>Bảo tàng thiên nhiên</title>
 	<link rel="stylesheet" type="text/css" href="asset/css/bootstrap/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="asset/css/main.css">
+	<!-- framework -->
 	<link rel="stylesheet" type="text/css" href="asset/css/jquery/jquery-ui.min.css">
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery.js"></script>
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery-ui.min.js"></script>
@@ -14,6 +15,8 @@
 	<script type="text/javascript" src="asset/js/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
 	<script type="text/javascript" src="asset/js/angular-ui-bootstrap/dist/ui-bootstrap-tpls-1.3.3.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-animate/angular-animate.min.js"></script>
+
+	<!-- handler -->
 	<script type="text/javascript" src="app.module.js"></script>
 	<script type="text/javascript" src="app.config.js"></script>
 	<script type="text/javascript" src="service.js"></script>
