--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="asset/css/main.css">
 	<!-- framework -->
 	<link rel="stylesheet" type="text/css" href="asset/css/jquery/jquery-ui.min.css">
+	<link rel="stylesheet" type="text/css" href="asset/js/angular-loading-bar/build/loading-bar.css">
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery.js"></script>
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="asset/js/jquery/bootstrap.js"></script>
@@ -15,6 +16,7 @@
 	<script type="text/javascript" src="asset/js/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
 	<script type="text/javascript" src="asset/js/angular-ui-bootstrap/dist/ui-bootstrap-tpls-1.3.3.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-animate/angular-animate.min.js"></script>
+	<script type="text/javascript" src="asset/js/angular-loading-bar/build/loading-bar.min.js"></script>
 
 	<!-- handler -->
 	<script type="text/javascript" src="app.module.js"></script>
