--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 	<script type="text/javascript" src="asset/js/controllers/ManageController.js"></script>
 	<script type="text/javascript" src="asset/js/filter/placeFilter.js"></script>
 	<script type="text/javascript" src="asset/js/angular-messages/angular-messages.min.js"></script>
-	<script type="text/javascript" src="asset/js/style.js"></script>
+	<!-- <script type="text/javascript" src="asset/js/style.js"></script> -->
 </head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
