--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,8 @@
 				<li class="dropdown">
 					<a href="" class="dropdown-toggle" data-toggle="dropdown">Thêm<b class="caret"></b></a>
 					<ul class="dropdown-menu">
+						<li><a href="/log">Lịch sử</a></li>
+						<li><a href="/config">Cài đặt</a></li>
 						<li><a href="#!/bai-dang">Quản lý bài đăng</a></li>
 						<li><a href="/auth/logout">Đăng xuất</a></li>
 					</ul>
