--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
 					<ul class="dropdown-menu">
 						<li><a href="/log">Lịch sử</a></li>
 						<li><a href="/config">Cài đặt</a></li>
-						<li><a href="#!/bai-dang">Quản lý bài đăng</a></li>
+						<li><a href="#!/bai-dang">Quản lý mẫu vật</a></li>
 						<li><a href="/auth/logout">Đăng xuất</a></li>
 					</ul>
 				</li>
@@ -68,8 +68,8 @@
 		</div>
 	</nav>
 	<div ng-view> </div>
-	<footer style="bottom: 0px; position: absolute; width: 100%;">
-		<div class="input-form">@copyright. All right is reserved</div>
-	</footer>
+<!-- 	<footer style="bottom: 0px; position: absolute; width: 100%;">
+		<div class="input-form">&copy; Copyright. All right is reserved</div>
+	</footer> -->
 </body>
 </html>
