--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
 	<script type="text/javascript" src="asset/js/angular-ui-bootstrap/dist/ui-bootstrap-tpls-1.3.3.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-animate/angular-animate.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-loading-bar/build/loading-bar.min.js"></script>
+	<script type="text/javascript" src="asset/js/angular-cookies/angular-cookies.min.js"></script>
 
 	<!-- handler -->
 	<script type="text/javascript" src="app.module.js"></script>
