--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,16 @@
 	<!-- framework -->
 	<link rel="stylesheet" type="text/css" href="asset/css/jquery/jquery-ui.min.css">
 	<link rel="stylesheet" type="text/css" href="asset/js/angular-loading-bar/build/loading-bar.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/flexdatalist/jquery.flexdatalist.min.css">
+	<style >
+		.flexdatalist-multiple{
+			width: 300px;
+			margin-left: 5px;
+		}
+		.flexdatalist-results{
+			margin-top: -60px;
+		}
+	</style>
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery.js"></script>
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="asset/js/jquery/bootstrap.js"></script>
@@ -18,6 +28,7 @@
 	<script type="text/javascript" src="asset/js/angular-animate/angular-animate.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-loading-bar/build/loading-bar.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-cookies/angular-cookies.min.js"></script>
+	<script type="text/javascript" src="/javascripts/flexdatalist/jquery.flexdatalist.min.js"></script>
 
 	<!-- handler -->
 	<script type="text/javascript" src="app.module.js"></script>
