Display datetime in dd/MM/yyyy

--- a/app/index.html
+++ b/app/index.html
@@ -9,14 +9,15 @@
 	<link rel="stylesheet" type="text/css" href="asset/css/jquery/jquery-ui.min.css">
 	<link rel="stylesheet" type="text/css" href="asset/js/angular-loading-bar/build/loading-bar.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/flexdatalist/jquery.flexdatalist.min.css">
+
+	<!-- Body padding is required when .navbar-fixed-top is used. -->
 	<style >
 		.flexdatalist-multiple{
 			width: 300px;
 			margin-left: 5px;
 		}
-		.flexdatalist-results{
-			margin-top: -60px;
-		}
+		
+		body { padding-top: 60px; } 
 	</style>
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery.js"></script>
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery-ui.min.js"></script>
