--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
 		
 		body { padding-top: 60px; } 
 	</style>
+	<script type="text/javascript" src="asset/js/buttonfile/custom-file-input.js"></script>
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery.js"></script>
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="asset/js/jquery/bootstrap.js"></script>
