--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 	<script type="text/javascript" src="asset/js/angular-animate/angular-animate.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-loading-bar/build/loading-bar.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-cookies/angular-cookies.min.js"></script>
-	<script type="text/javascript" src="/javascripts/flexdatalist/jquery.flexdatalist.min.js"></script>
+	<script type="text/javascript" src="/javascripts/flexdatalist/jquery.flexdatalist.js"></script>
 
 	<!-- handler -->
 	<script type="text/javascript" src="app.module.js"></script>
