--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
 	<script type="text/javascript" src="asset/js/jquery/bootstrap.js"></script>
 	<script type="text/javascript" src="asset/js/angular/angular.js"></script>
 	<script type="text/javascript" src="asset/js/angular-route/angular-route.min.js"></script>
+	<script type="text/javascript" src="asset/js/spinner/spin.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
 	<script type="text/javascript" src="asset/js/angular-ui-bootstrap/dist/ui-bootstrap-tpls-1.3.3.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-animate/angular-animate.min.js"></script>
