--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="asset/css/main.css">
 	<!-- framework -->
 	<link rel="stylesheet" type="text/css" href="asset/css/jquery/jquery-ui.min.css">
-	<link rel="stylesheet" type="text/css" href="asset/js/angular-loading-bar/build/loading-bar.css">
+	<!-- <link rel="stylesheet" type="text/css" href="asset/js/angular-loading-bar/build/loading-bar.css"> -->
 	<link rel="stylesheet" type="text/css" href="/stylesheets/flexdatalist/jquery.flexdatalist.min.css">
 
 	<!-- Body padding is required when .navbar-fixed-top is used. -->
@@ -27,8 +27,10 @@
 	<script type="text/javascript" src="asset/js/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
 	<script type="text/javascript" src="asset/js/angular-ui-bootstrap/dist/ui-bootstrap-tpls-1.3.3.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-animate/angular-animate.min.js"></script>
-	<script type="text/javascript" src="asset/js/angular-loading-bar/build/loading-bar.min.js"></script>
+	<!-- <script type="text/javascript" src="asset/js/angular-loading-bar/build/loading-bar.min.js"></script> -->
 	<script type="text/javascript" src="asset/js/angular-cookies/angular-cookies.min.js"></script>
+	<script type="text/javascript" src="asset/js/angular-loading-overlay/dist/angular-loading-overlay.js"></script>
+	<script type="text/javascript" src="asset/js/angular-loading-overlay-http-interceptor/dist/angular-loading-overlay-http-interceptor.js"></script>
 	<script type="text/javascript" src="/javascripts/flexdatalist/jquery.flexdatalist.min.js"></script>
 
 	<!-- handler -->
