--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Bảo tàng thiên nhiên</title>
 	<link rel="stylesheet" type="text/css" href="asset/css/bootstrap/bootstrap.css">
+	<!-- <link rel="stylesheet" type="text/css" href="asset/js/jquery-filestyle/jquery-filestyle.css"> -->
 	<link rel="stylesheet" type="text/css" href="asset/css/main.css">
 	<!-- framework -->
 	<link rel="stylesheet" type="text/css" href="asset/css/jquery/jquery-ui.min.css">
@@ -19,9 +20,10 @@
 		
 		body { padding-top: 60px; } 
 	</style>
-	<script type="text/javascript" src="asset/js/buttonfile/custom-file-input.js"></script>
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery.js"></script>
+	<!-- <script type="text/javascript" src="asset/js/jquery-filestyle/jquery-filestyle.js"></script> -->
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery-ui.min.js"></script>
+
 	<script type="text/javascript" src="asset/js/jquery/bootstrap.js"></script>
 	<script type="text/javascript" src="asset/js/angular/angular.js"></script>
 	<script type="text/javascript" src="asset/js/angular-route/angular-route.min.js"></script>
@@ -30,6 +32,8 @@
 	<script type="text/javascript" src="asset/js/angular-animate/angular-animate.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-loading-bar/build/loading-bar.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-cookies/angular-cookies.min.js"></script>
+	<script type="text/javascript" src="asset/js/angular-spinners/dist/angular-spinners.js"></script>
+	
 	<script type="text/javascript" src="/javascripts/flexdatalist/jquery.flexdatalist.min.js"></script>
 
 	<!-- handler -->
@@ -41,6 +45,7 @@
 	<script type="text/javascript" src="asset/js/controllers/ManageController.js"></script>
 	<script type="text/javascript" src="asset/js/filter/placeFilter.js"></script>
 	<script type="text/javascript" src="asset/js/angular-messages/angular-messages.min.js"></script>
+	<script type="text/javascript" src="asset/js/jquery-filestyle/jquery-filestyle.js"></script>
 	<!-- <script type="text/javascript" src="asset/js/style.js"></script> -->
 </head>
 <body>
