--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 		body { padding-top: 60px; } 
 	</style>
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery.js"></script>
-	<script type="text/javascript" src="asset/js/jquery-filestyle/jquery-filestyle.js"></script>
+	<!-- <script type="text/javascript" src="asset/js/jquery-filestyle/jquery-filestyle.js"></script> -->
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery-ui.min.js"></script>
 
 	<script type="text/javascript" src="asset/js/jquery/bootstrap.js"></script>
@@ -36,7 +36,6 @@
 	<script type="text/javascript" src="asset/js/angular-loading-overlay/dist/angular-loading-overlay.js"></script>
 	<script type="text/javascript" src="asset/js/angular-loading-overlay-http-interceptor/dist/angular-loading-overlay-http-interceptor.js"></script>
 	<script type="text/javascript" src="/javascripts/flexdatalist/jquery.flexdatalist.min.js"></script>
-
 	<!-- handler -->
 	<script type="text/javascript" src="app.module.js"></script>
 	<script type="text/javascript" src="app.config.js"></script>
