--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
 	<script type="text/javascript" src="asset/js/angular-loading-bar/build/loading-bar.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-cookies/angular-cookies.min.js"></script>
 	<script type="text/javascript" src="/javascripts/flexdatalist/jquery.flexdatalist.js"></script>
+	<script type="text/javascript" src= "asset/js/buttonfile/custom-file-input.js"></script>
 
 	<!-- handler -->
 	<script type="text/javascript" src="app.module.js"></script>
