--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Bảo tàng thiên nhiên</title>
 	<link rel="stylesheet" type="text/css" href="asset/css/bootstrap/bootstrap.css">
-	<!-- <link rel="stylesheet" type="text/css" href="asset/js/jquery-filestyle/jquery-filestyle.css"> -->
+	<link rel="stylesheet" type="text/css" href="asset/css/customfileinput/component.css">
 	<link rel="stylesheet" type="text/css" href="asset/css/main.css">
 	<!-- framework -->
 	<link rel="stylesheet" type="text/css" href="asset/css/jquery/jquery-ui.min.css">
@@ -21,7 +21,6 @@
 		body { padding-top: 60px; } 
 	</style>
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery.js"></script>
-	<!-- <script type="text/javascript" src="asset/js/jquery-filestyle/jquery-filestyle.js"></script> -->
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery-ui.min.js"></script>
 
 	<script type="text/javascript" src="asset/js/jquery/bootstrap.js"></script>
@@ -45,8 +44,7 @@
 	<script type="text/javascript" src="asset/js/controllers/ManageController.js"></script>
 	<script type="text/javascript" src="asset/js/filter/placeFilter.js"></script>
 	<script type="text/javascript" src="asset/js/angular-messages/angular-messages.min.js"></script>
-	<script type="text/javascript" src="asset/js/jquery-filestyle/jquery-filestyle.js"></script>
-	<!-- <script type="text/javascript" src="asset/js/style.js"></script> -->
+	<script type="text/javascript" src="asset/js/buttonfile/custom-file-input.js"></script>
 </head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
