--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,7 @@
 				<li class="dropdown">
 					<a href="" class="dropdown-toggle" data-toggle="dropdown">Thêm<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href="/log">Lịch sử</a></li>
+						<li><a href="/log/all">Lịch sử</a></li>
 						<li><a href="/config">Cài đặt</a></li>
 						<li><a href="#!/bai-dang">Quản lý mẫu vật</a></li>
 						<li><a href="/auth/logout">Đăng xuất</a></li>
