--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,8 @@
 						<li><a href="/log/all">Lịch sử</a></li>
 						<li><a href="/config">Cài đặt</a></li>
 						<li><a href="#!/bai-dang">Quản lý mẫu vật</a></li>
+						<li><a href="/admin">Admin</a></li>
+						<li><a href="/manager">Chủ nhiệm đề tài</a></li>
 						<li><a href="/auth/logout">Đăng xuất</a></li>
 					</ul>
 				</li>
