Use Vietnamese in Manager Dashboard + add favicon

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Bảo tàng thiên nhiên</title>
+	<link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="asset/css/bootstrap/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="asset/css/customfileinput/component.css">
 	<link rel="stylesheet" type="text/css" href="asset/css/main.css">
