--- a/app/index.html
+++ b/app/index.html
@@ -51,10 +51,8 @@
 					<a href="" class="dropdown-toggle" data-toggle="dropdown">Thêm<b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li><a href="/log/all">Lịch sử</a></li>
-						<li><a href="/config">Cài đặt</a></li>
 						<li><a href="#!/bai-dang">Quản lý mẫu vật</a></li>
-						<li><a href="/admin">Admin</a></li>
-						<li><a href="/manager">Chủ nhiệm đề tài</a></li>
+						<li><a href="/admin">Quản lý tài khoản</a></li>
 						<li><a href="/auth/logout">Đăng xuất</a></li>
 					</ul>
 				</li>
