--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="asset/css/jquery/jquery-ui.min.css">
 	<link rel="stylesheet" type="text/css" href="asset/js/angular-loading-bar/build/loading-bar.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/flexdatalist/jquery.flexdatalist.min.css">
+	<link rel="stylesheet" href="/admin/plugins/datatables/dataTables.bootstrap.css">
 
 	<!-- Body padding is required when .navbar-fixed-top is used. -->
 	<style >
@@ -47,7 +48,7 @@
 				</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown">
-					<a href="" class="dropdown-toggle" data-toggle="dropdown">Thêm<b class="caret"></b></a>
+					<a href="" class="dropdown-toggle" data-toggle="dropdown">Thêm <b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li><a href="/log/all">Lịch sử</a></li>
 						<li><a href="/config">Cài đặt</a></li>
