--- a/app/index.html
+++ b/app/index.html
@@ -91,5 +91,6 @@
 	<script type="text/javascript" src="asset/js/filter/placeFilter.js"></script>
 	<script type="text/javascript" src="asset/js/angular-messages/angular-messages.min.js"></script>
 	<script type="text/javascript" src="asset/js/buttonfile/custom-file-input.js"></script>
+	<script type="text/javascript" src="asset/js/controllers/TestController.js"></script>
 </body>
 </html>
