--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
 						<li><a href="/log/all">Lịch sử</a></li>
 						<li><a href="#!/bai-dang">Quản lý mẫu vật</a></li>
 						<li><a href="/admin">Quản lý tài khoản</a></li>
+						<li><a href="/users">Trang cá nhân</a></li>
 						<li><a href="/auth/logout">Đăng xuất</a></li>
 					</ul>
 				</li>
