--- a/app/index.html
+++ b/app/index.html
@@ -37,8 +37,8 @@
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse navbar-ex1-collapse">
-				<ul class="nav navbar-nav" ng-if="restricted.restrict">
-					<li class="dropdown">
+				<ul class="nav navbar-nav">
+					<li class="dropdown" ng-if="restricted.restrict">
 						<a href="" class="dropdown-toggle" data-toggle="dropdown">Thêm mẫu vật <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li ng-if="restricted.restrict.cosinh.create"><a ui-sref="them-co-sinh">Cổ sinh</a></li>
@@ -48,13 +48,13 @@
 							<li ng-if="restricted.restrict.thucvat.create"><a ui-sref="them-thuc-vat">Thực vật</a></li>
 						</ul>
 					</li>
+					<li><a ui-sref="quan-ly">Quản lý mẫu vật</a></li>
+					<li><a href="/log/all">Lịch sử nhập liệu</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown">
 						<a href="" class="dropdown-toggle" data-toggle="dropdown">{{restricted.user.fullname}} <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="/log/all">Lịch sử</a></li>
-							<li><a ui-sref="quan-ly">Quản lý mẫu vật</a></li>
 							<li><a href="/admin">Quản lý tài khoản</a></li>
 							<li><a href="/users">Trang cá nhân</a></li>
 							<li><a href="/auth/logout">Đăng xuất</a></li>
