--- a/app/index.html
+++ b/app/index.html
@@ -93,8 +93,10 @@
 	<script type="text/javascript" src="asset/js/controllers/EditFormController.js"></script>
 	<script type="text/javascript" src="asset/js/controllers/ManageController.js"></script>
 	<script type="text/javascript" src="asset/js/filter/placeFilter.js"></script>
+	<script type="text/javascript" src="asset/js/filter/propertyFilter.js"></script>
 	<script type="text/javascript" src="asset/js/angular-messages/angular-messages.min.js"></script>
 	<script type="text/javascript" src="asset/js/buttonfile/custom-file-input.js"></script>
 	<script type="text/javascript" src="asset/js/controllers/TestController.js"></script>
+	<script type="text/javascript" src="asset/js/controllers/GuestViewsController.js"></script>
 </body>
 </html>
