search data from db

--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
 					<li><a ui-sref="quan-ly">Quản lý mẫu vật</a></li>
 					<li><a href="/log/all">Lịch sử nhập liệu</a></li>
 				</ul>
+
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown">
 						<a href="" class="dropdown-toggle" data-toggle="dropdown">{{restricted.user.fullname}} <b class="caret"></b></a>
@@ -61,6 +62,13 @@
 						</ul>
 					</li>
 				</ul>
+
+				<form class="navbar-form navbar-right" role="search" ng-controller="SearchController">
+					<div class="form-group">
+						<input type="text" class="form-control" ng-model="searchData" placeholder="Tìm kiếm...">
+					</div>
+					<button type="button" ng-click="search(searchData)" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+				</form>
 			</div>
 		</div>
 	</nav>
@@ -92,6 +100,7 @@
 	<script type="text/javascript" src="asset/js/controllers/FormController.js"></script>
 	<script type="text/javascript" src="asset/js/controllers/EditFormController.js"></script>
 	<script type="text/javascript" src="asset/js/controllers/ManageController.js"></script>
+	<script type="text/javascript" src="asset/js/controllers/SearchController.js"></script>
 	<script type="text/javascript" src="asset/js/filter/placeFilter.js"></script>
 	<script type="text/javascript" src="asset/js/filter/propertyFilter.js"></script>
 	<script type="text/javascript" src="asset/js/angular-messages/angular-messages.min.js"></script>
