add search controller

--- a/app/index.html
+++ b/app/index.html
@@ -63,12 +63,12 @@
 					</li>
 				</ul>
 
-				<form class="navbar-form navbar-right" role="search" ng-controller="SearchController">
+				<!-- <form class="navbar-form navbar-right" role="search" ng-controller="SearchController">
 					<div class="form-group">
 						<input type="text" class="form-control" ng-model="searchData" placeholder="Tìm kiếm...">
 					</div>
 					<button type="button" ng-click="search(searchData)" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
-				</form>
+				</form> -->
 			</div>
 		</div>
 	</nav>
@@ -102,6 +102,7 @@
 	<script type="text/javascript" src="asset/js/controllers/ManageController.js"></script>
 	<script type="text/javascript" src="asset/js/controllers/SearchController.js"></script>
 	<script type="text/javascript" src="asset/js/filter/placeFilter.js"></script>
+	<script type="text/javascript" src="asset/js/controllers/OfflineController.js"></script>
 	<script type="text/javascript" src="asset/js/filter/propertyFilter.js"></script>
 	<script type="text/javascript" src="asset/js/angular-messages/angular-messages.min.js"></script>
 	<script type="text/javascript" src="asset/js/buttonfile/custom-file-input.js"></script>
