test download file

--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,7 @@
 						<ul class="dropdown-menu">
 							<li><a href="/admin"><b>Quản lý tài khoản</b></a></li>
 							<li><a href="/users"><b>Trang cá nhân</b></a></li>
+							<!-- <li><a ui-sref="nhap-offline"><b>Nhập offline</b></a></li> -->
 							<li><a href="/auth/logout"><b>Đăng xuất</b></a></li>
 						</ul>
 					</li>
