--- a/app/index.html
+++ b/app/index.html
@@ -41,21 +41,21 @@
 					<li class="dropdown" ng-if="restricted.restrict">
 						<a href="" class="dropdown-toggle" data-toggle="dropdown"><b>Thêm mẫu vật</b> <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li ng-if="restricted.restrict.cosinh.create"><a ui-sref="them-co-sinh"><b>Cổ sinh</b></a></li>
-							<li ng-if="restricted.restrict.diachat.create"><a ui-sref="them-dia-chat"><b>Địa chất</b></a></li>
-							<li ng-if="restricted.restrict.dongvat.create"><a ui-sref="them-dong-vat"><b>Động vật</b></a></li>
-							<li ng-if="restricted.restrict.thonhuong.create"><a ui-sref="them-tho-nhuong"><b>Thổ nhưỡng</b></a></li>
-							<li ng-if="restricted.restrict.thucvat.create"><a ui-sref="them-thuc-vat"><b>Thực vật</b></a></li>
+							<li ng-if="restricted.restrict.cosinh.create"><a ui-sref="them-co-sinh">Cổ sinh</a></li>
+							<li ng-if="restricted.restrict.diachat.create"><a ui-sref="them-dia-chat">Địa chất</a></li>
+							<li ng-if="restricted.restrict.dongvat.create"><a ui-sref="them-dong-vat">Động vật</a></li>
+							<li ng-if="restricted.restrict.thonhuong.create"><a ui-sref="them-tho-nhuong">Thổ nhưỡng</a></li>
+							<li ng-if="restricted.restrict.thucvat.create"><a ui-sref="them-thuc-vat">Thực vật</a></li>
 						</ul>
 					</li>
 					<li class="dropdown" ng-if="restricted.restrict">
 						<a href="" class="dropdown-toggle" data-toggle="dropdown"><b>Quản lý mẫu vật</b> <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li ng-if="restricted.restrict.cosinh.create"><a ui-sref="quan-ly-co-sinh"><b>Các mẫu cổ sinh</b></a></li>
-							<li ng-if="restricted.restrict.diachat.create"><a ui-sref="quan-ly-dia-chat"><b>Các mẫu địa chất</b></a></li>
-							<li ng-if="restricted.restrict.dongvat.create"><a ui-sref="quan-ly-dong-vat"><b>Các mẫu động vật</b></a></li>
-							<li ng-if="restricted.restrict.thonhuong.create"><a ui-sref="quan-ly-tho-nhuong"><b>Các mẫu thổ nhưỡng</b></a></li>
-							<li ng-if="restricted.restrict.thucvat.create"><a ui-sref="quan-ly-thuc-vat"><b>Các mẫu thực vật</b></a></li>
+							<li ng-if="restricted.restrict.cosinh.create"><a ui-sref="quan-ly-co-sinh">Mẫu cổ sinh</a></li>
+							<li ng-if="restricted.restrict.diachat.create"><a ui-sref="quan-ly-dia-chat">Mẫu địa chất</a></li>
+							<li ng-if="restricted.restrict.dongvat.create"><a ui-sref="quan-ly-dong-vat">Mẫu động vật</a></li>
+							<li ng-if="restricted.restrict.thonhuong.create"><a ui-sref="quan-ly-tho-nhuong">Mẫu thổ nhưỡng</a></li>
+							<li ng-if="restricted.restrict.thucvat.create"><a ui-sref="quan-ly-thuc-vat">thực vật</a></li>
 						</ul>
 					</li>
 					<li><a href="/log/all"><b>Lịch sử nhập liệu</b></a></li>
@@ -100,6 +100,8 @@
 	<script type="text/javascript" src="asset/js/angular-loading-bar/build/loading-bar.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-loading-overlay/dist/angular-loading-overlay.js"></script>
 	<script type="text/javascript" src="asset/js/angular-loading-overlay-http-interceptor/dist/angular-loading-overlay-http-interceptor.js"></script>
+	<script type="text/javascript" src="asset/js/angular-js-xlsx/angular-js-xlsx.js"></script>
+	<script type="text/javascript" src="asset/js/angular-js-xlsx/xlsx.core.min.js"></script>
 	<script type="text/javascript" src="/javascripts/flexdatalist/jquery.flexdatalist.min.js"></script>
 
 	<!-- handler -->
