--- a/app/index.html
+++ b/app/index.html
@@ -63,11 +63,10 @@
 
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown">
-						<a href="" class="dropdown-toggle" data-toggle="dropdown"><b>{{restricted.user.fullname}}</b><b class="caret"></b></a>
+						<a href="" class="dropdown-toggle" data-toggle="dropdown"><b ng-bind="restricted.user.fullname"></b><b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="/admin"><b>Quản lý tài khoản</b></a></li>
 							<li><a href="/users"><b>Trang cá nhân</b></a></li>
-							<!-- <li><a ui-sref="nhap-offline"><b>Nhập offline</b></a></li> -->
 							<li><a href="/auth/logout"><b>Đăng xuất</b></a></li>
 						</ul>
 					</li>
