--- a/app/index.html
+++ b/app/index.html
@@ -116,7 +116,7 @@
 	<script type="text/javascript" src="asset/js/controllers/OfflineController.js"></script>
 	<script type="text/javascript" src="asset/js/filter/propertyFilter.js"></script>
 	<script type="text/javascript" src="asset/js/angular-messages/angular-messages.min.js"></script>
-	<script type="text/javascript" src="asset/js/buttonfile/custom-file-input.js"></script>
+	<!-- <script type="text/javascript" src="asset/js/buttonfile/custom-file-input.js"></script> -->
 	<script type="text/javascript" src="asset/js/controllers/TestController.js"></script>
 	<script type="text/javascript" src="asset/js/controllers/GuestViewsController.js"></script>
 	<script type="text/javascript" src="asset/js/angular-paging/paging.min.js"></script>
