--- a/app/index.html
+++ b/app/index.html
@@ -12,14 +12,6 @@
 	<link rel="stylesheet" type="text/css" href="asset/js/angular-loading-bar/build/loading-bar.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/flexdatalist/jquery.flexdatalist.min.css">
 	<link rel="stylesheet" href="/admin/plugins/datatables/dataTables.bootstrap.css">
-	<style >
-		.flexdatalist-multiple{
-			width: 300px;
-			margin-left: 5px;
-		}
-		
-		body { padding-top: 60px; } 
-	</style>
 </head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -81,7 +73,7 @@
 			</div>
 		</div>
 	</nav>
-	<div ui-view> </div>
+	<div ui-view style="margin-top: 20px;"></div>
 <!-- 	<footer style="bottom: 0px; position: absolute; width: 100%;">
 		<div class="input-form">&copy; Copyright. All right is reserved</div>
 	</footer> -->
