--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,9 @@
 			</div>
 		</div>
 	</nav>
-	<div ui-view style="margin-top: 20px;"></div>
+	<section>
+		<div ui-view style="margin-top: 20px;" class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12"></div>
+	</section>
 <!-- 	<footer style="bottom: 0px; position: absolute; width: 100%;">
 		<div class="input-form">&copy; Copyright. All right is reserved</div>
 	</footer> -->
