--- a/app/index.html
+++ b/app/index.html
@@ -76,8 +76,8 @@
 	<section>
 		<div ui-view style="margin-top: 20px;" class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12"></div>
 	</section>
-<!-- 	<footer style="bottom: 0px; position: absolute; width: 100%;">
-		<div class="input-form">&copy; Copyright. All right is reserved</div>
+	<!-- <footer style="bottom: 0px; position: absolute; width: 100%;">
+		<div class="input-form form-control">&copy; Copyright. All right is reserved</div>
 	</footer> -->
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery.js"></script>
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery-ui.min.js"></script>
