--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,13 @@
 							<li ng-if="restricted.restrict.thucvat.create"><a ui-sref="quan-ly-thuc-vat">Mẫu thực vật</a></li>
 						</ul>
 					</li>
-					<li><a href="/log/all"><b>Lịch sử nhập liệu</b></a></li>
+					<li class="dropdown">
+						<a href="" class="dropdown-toggle" data-toggle="dropdown"><b>Báo cáo</b> <b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="/log">Lịch sử nhập liệu</a></li>
+							<li><a href="">Thống kê</a></li>
+						</ul>
+					</li>
 				</ul>
 
 				<ul class="nav navbar-nav navbar-right">
