finish all form for auto upload

--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,7 @@
 	<script type="text/javascript" src="asset/js/angular-js-xlsx/angular-js-xlsx.js"></script>
 	<script type="text/javascript" src="asset/js/angular-js-xlsx/xlsx.core.min.js"></script>
 	<script type="text/javascript" src="/javascripts/flexdatalist/jquery.flexdatalist.min.js"></script>
+	<script type="text/javascript" src="/javascripts/crypto-js.js"></script>
 
 	<!-- handler -->
 	<script type="text/javascript" src="app.module.js"></script>
