add choose from google map

--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
 
 				<ul class="nav navbar-nav navbar-right">
 					<li ng-controller="translateCtrl">
-						<a href="" class="dropdown-toggle" data-toggle="dropdown">{{'ngonngu' | translate }}</a>
+						<a href="" class="dropdown-toggle" data-toggle="dropdown">{{'ngonngu' | translate }}<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li ng-click="changeLang('eng')"><a href="">English</a></li>
 							<li  ng-click="changeLang('vi')"><a href="">Vietnamese</a></li>
@@ -101,6 +101,8 @@
 
 	<script type="text/javascript" src="asset/js/jquery/bootstrap.js"></script>
 	<script type="text/javascript" src="asset/js/angular/angular.js"></script>
+	<script type="text/javascript" src="asset/js/angular-google-maps/ng-map.js"></script>
+	<!-- <script type="text/javascript" src="asset/js/angular-map/angular-google-maps.min.js"></script> -->
 	<script type="text/javascript" src="asset/js/angular-inline-text-editor/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-inline-text-editor/bower_components/rangy/rangy-core.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-inline-text-editor/bower_components/rangy/rangy-classapplier.min.js"></script>
