--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="asset/css/bootstrap/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="asset/css/customfileinput/component.css">
 	<link rel="stylesheet" type="text/css" href="asset/css/main.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="asset/js/angular-inline-text-editor/ite.css">
 	<!-- framework -->
 	<link rel="stylesheet" type="text/css" href="asset/css/jquery/jquery-ui.min.css">
 	<link rel="stylesheet" type="text/css" href="asset/js/angular-loading-bar/build/loading-bar.css">
@@ -90,6 +92,11 @@
 
 	<script type="text/javascript" src="asset/js/jquery/bootstrap.js"></script>
 	<script type="text/javascript" src="asset/js/angular/angular.js"></script>
+	<script type="text/javascript" src="asset/js/angular-inline-text-editor/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+	<script type="text/javascript" src="asset/js/angular-inline-text-editor/bower_components/rangy/rangy-core.min.js"></script>
+	<script type="text/javascript" src="asset/js/angular-inline-text-editor/bower_components/rangy/rangy-classapplier.min.js"></script>
+	<script type="text/javascript" src="asset/js/angular-inline-text-editor/bower_components/rangy/rangy-selectionsaverestore.min.js"></script>
+	<script type="text/javascript" src="asset/js/angular-inline-text-editor/ite.js"></script>
 	<script type="text/javascript" src="asset/js/angular-ui-router/release/angular-ui-router.min.js"></script>
 	<script type="text/javascript" src="asset/js/spinner/spin.min.js"></script>
 	<script type="text/javascript" src="asset/js/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
