--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
 					<li class="dropdown">
 						<a href="" class="dropdown-toggle" data-toggle="dropdown"><b>{{'nav.baocao.tieude' | translate }}</b> <b class="caret"></b></a>
 						<ul class="dropdown-menu">
-							<li><a href="/log">{{'nav.baocao.lichsunhaplieu' | translate }}</a></li>
+							<li><a href="/log/all">{{'nav.baocao.lichsunhaplieu' | translate }}</a></li>
 							<li><a href="">{{'nav.baocao.thongke' | translate }}</a></li>
 						</ul>
 					</li>
@@ -67,7 +67,7 @@
 						<a href="" class="dropdown-toggle" data-toggle="dropdown">{{'ngonngu' | translate }}<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li ng-click="changeLang('eng')"><a href="">English</a></li>
-							<li  ng-click="changeLang('vi')"><a href="">Vietnamese</a></li>
+							<li  ng-click="changeLang('vi')"><a href="">Tiếng Việt</a></li>
 						</ul>
 						<!-- <button type="button" class="btn btn-success"">Change</button> -->
 					</li>
