--- a/app/index.html
+++ b/app/index.html
@@ -92,8 +92,9 @@
 	</footer> -->
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery.js"></script>
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="https://maps.google.com/maps/api/js"></script>
+	<script type="text/javascript" src="asset/js/google/google-map.js"></script>
 	<script type="text/javascript" src="asset/js/jquery/bootstrap.js"></script>
+	<script type="text/javascript" src="asset/js/bootstrap-notify/bootstrap-notify.js"></script>
 	<script type="text/javascript" src="asset/js/angular/angular.js"></script>
 	<script type="text/javascript" src="asset/js/angular-google-maps/ng-map.js"></script>
 	<!-- <script type="text/javascript" src="asset/js/angular-map/angular-google-maps.min.js"></script> -->
