--- a/app/index.html
+++ b/app/index.html
@@ -90,9 +90,10 @@
 	<!-- <footer style="bottom: 0px; position: absolute; width: 100%;">
 		<div class="input-form form-control">&copy; Copyright. All right is reserved</div>
 	</footer> -->
+	<!-- <ng-include src="'views/templates/footer.template.html'" scope="" onload=""></ng-include> -->
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery.js"></script>
 	<script type="text/javascript" src="asset/js/jquery/jquery/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="asset/js/google/google-map.js"></script>
+	<script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAa6go5wcMQwOo3DGioOqFPuHgvyXICKlY'></script>
 	<script type="text/javascript" src="asset/js/jquery/bootstrap.js"></script>
 	<script type="text/javascript" src="asset/js/bootstrap-notify/bootstrap-notify.js"></script>
 	<script type="text/javascript" src="asset/js/angular/angular.js"></script>
