--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,10 @@
 	<link rel="stylesheet" type="text/css" href="/stylesheets/flexdatalist/jquery.flexdatalist.min.css">
 	<link rel="stylesheet" href="/admin/plugins/datatables/dataTables.bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="asset/js/angular-inline-text-editor/ite.css">
+
+	<!-- css cho phan ban do -->
+	<link rel="stylesheet" href="asset/js/leaflet/dist/leaflet.css" />
+	<link rel="stylesheet" href="asset/js/leaflet-draw/dist/leaflet.draw.css" />
 </head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -135,9 +139,16 @@
 	<script type="text/javascript" src="asset/js/controllers/OfflineController.js"></script>
 	<script type="text/javascript" src="asset/js/filter/propertyFilter.js"></script>
 	<script type="text/javascript" src="asset/js/angular-messages/angular-messages.min.js"></script>
+	<script type="text/javascript" src="asset/js/controllers/LeafletMapController.js"></script>
 	<!-- <script type="text/javascript" src="asset/js/buttonfile/custom-file-input.js"></script> -->
 	<script type="text/javascript" src="asset/js/controllers/TestController.js"></script>
 	<script type="text/javascript" src="asset/js/controllers/GuestViewsController.js"></script>
 	<script type="text/javascript" src="asset/js/angular-paging/paging.min.js"></script>
+
+	<!-- Thu vien phan ban do -->
+	<script src="asset/js/leaflet/dist/leaflet.js"></script>
+	<script src="asset/js/leaflet-draw/dist/leaflet.draw-src.js"></script>
+	<script src="asset/js/ui-leaflet/dist/ui-leaflet.js"></script>
+	<script src="asset/js/ui-leaflet-draw/dist/ui-leaflet-draw.js"></script>
 </body>
 </html>
