xong phần bản đồ

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
 	<!-- css cho phan ban do -->
 	<link rel="stylesheet" href="asset/js/leaflet/dist/leaflet.css" />
 	<link rel="stylesheet" href="asset/js/leaflet-draw/dist/leaflet.draw.css" />
+	<link rel="stylesheet" href="asset/js/Leaflet.ExtraMarkers/src/leaflet.extra-markers.css">
 </head>
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -148,7 +149,9 @@
 	<!-- Thu vien phan ban do -->
 	<script src="asset/js/leaflet/dist/leaflet.js"></script>
 	<script src="asset/js/leaflet-draw/dist/leaflet.draw-src.js"></script>
+	<script src="asset/js/angular-simple-logger/dist/angular-simple-logger.js"></script>
 	<script src="asset/js/ui-leaflet/dist/ui-leaflet.js"></script>
 	<script src="asset/js/ui-leaflet-draw/dist/ui-leaflet-draw.js"></script>
+	<script src="asset/js/Leaflet.ExtraMarkers/src/leaflet.extra-markers.js"></script>
 </body>
 </html>
