--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="asset/js/Leaflet.ExtraMarkers/src/leaflet.extra-markers.css">
 </head>
 <body>
+	<!-- <div ui-view="homepage"></div> -->
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
