--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
 					</li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right" ng-controller="translateCtrl">
-					<li><a href="">{{'ngonngu' | translate }}:</a></li>
+					<!-- <li><a href="">{{'ngonngu' | translate }}:</a></li> -->
 					<li ng-click="changeLang('eng')"><a href=""><img src="asset/image/en.gif"></a></li>
 					<li  ng-click="changeLang('vi')"><a href=""><img src="asset/image/vi.gif"></a></li>
 					<li class="dropdown">
