--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
 						<ul class="dropdown-menu">
 							<li><a href="/log/all">{{'nav.baocao.lichsunhaplieu' | translate }}</a></li>
 							<li><a ui-sref="leaflet-map">{{'nav.baocao.truyvan' | translate }}</a></li>
-							<li><a href="">{{'nav.baocao.thongke' | translate }}</a></li>
+							<li><a href="/manager/statistic">{{'nav.baocao.thongke' | translate }}</a></li>
 						</ul>
 					</li>
 				</ul>
