--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right" ng-controller="translateCtrl">
 					<!-- <li><a ui-sref="tim-kiem" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></a></li> -->
-					<li ng-click="changeLang('eng')"><a href=""><img src="asset/image/en.gif"></a></li>
+					<!-- <li ng-click="changeLang('eng')"><a href=""><img src="asset/image/en.gif"></a></li> -->
 					<li  ng-click="changeLang('vi')"><a href=""><img src="asset/image/vi.gif"></a></li>
 					<li class="dropdown">
 						<a href="" class="dropdown-toggle" data-toggle="dropdown"><b ng-bind="restricted.user.fullname"></b><b class="caret"></b></a>
@@ -82,7 +82,7 @@
 					</li>
 				</ul>
 
-				<!-- <form class="navbar-form navbar-right" role="search" ng-controller="SearchController">
+			<!-- 	<form class="navbar-form navbar-right" role="search" ng-controller="SearchController">
 					<div class="input-group">
 				      	<input type="text" class="form-control" placeholder="Tìm kiếm...">
 				      	<span class="input-group-btn">
@@ -90,12 +90,12 @@
 				            	<span class=" glyphicon glyphicon-search"></span>
 				        	</a>
 				      	</span>
-				    </div>
-					<div class="form-group">
+				    </div> -->
+					<!-- <div class="form-group">
 						<input type="text" class="form-control" ng-model="searchData" placeholder="Tìm kiếm...">
 					</div>
-					<a ui-sref="tim-kiem" ng-click="search(searchData)" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></a>
-				</form> -->
+					<a ui-sref="tim-kiem" ng-click="search(searchData)" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></a> -->
+				<!-- </form> -->
 			</div>
 		</div>
 	</nav>
