Thêm trang home hiển thị ngẫu nhiên một số mẫu vật

--- a/app/index.html
+++ b/app/index.html
@@ -147,6 +147,7 @@
 	<script type="text/javascript" src="service.js"></script>
 	<script type="text/javascript" src="app.config.js"></script>
 	
+	<script type="text/javascript" src="asset/js/controllers/HomeController.js"></script>
 	<script type="text/javascript" src="asset/js/controllers/FormController.js"></script>
 	<script type="text/javascript" src="asset/js/controllers/EditFormController.js"></script>
 	<script type="text/javascript" src="asset/js/controllers/ManageController.js"></script>
