sửa lại đường dẫn đến trang home mới

--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
 							<li><a ui-sref="leaflet-map">{{'nav.truyvan.bando' | translate }}</a></li>
 						</ul>
 					</li>
+					<li class=""><a ui-sref="document"><b>{{'nav.tailieu' | translate }}</b></a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right" ng-controller="translateCtrl">
 					<!-- <li><a ui-sref="tim-kiem" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></a></li> -->
@@ -88,6 +89,8 @@
 						</ul>
 					</li>
 				</ul>
+
+				
 
 				<form class="navbar-form navbar-right" role="search" ng-controller="SearchController">
 					<div class="input-group">
