fix display error coordinate

--- a/app/index.html
+++ b/app/index.html
@@ -106,7 +106,7 @@
 			</div>
 		</div>
 	</nav>
-	<section style="overflow:auto;">
+	<section style="overflow:auto; min-height: 800px;">
 		<div ui-view></div>
 	</section>
 <!-- 	<footer style="bottom: 0px; position: absolute; width: 100%;">
