thêm tên quần đảo hoàng sa và trường sa

--- a/app/index.html
+++ b/app/index.html
@@ -168,6 +168,7 @@
 
 	<!-- Thu vien phan ban do -->
 	<script src="asset/js/leaflet/dist/leaflet.js"></script>
+	<script type="text/javascript" src='/javascripts/leaflet.label.js'></script>
 	<script src="asset/js/leaflet-draw/dist/leaflet.draw-src.js"></script>
 	<script src="asset/js/angular-simple-logger/dist/angular-simple-logger.js"></script>
 	<script src="asset/js/ui-leaflet/dist/ui-leaflet.js"></script>
