--- a/app/index.html
+++ b/app/index.html
@@ -79,8 +79,8 @@
 				</ul>
 				<ul class="nav navbar-nav navbar-right" ng-controller="translateCtrl">
 					<!-- <li><a ui-sref="tim-kiem" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></a></li> -->
-					<!-- <li ng-click="changeLang('eng')"><a href=""><img src="asset/image/en.gif"></a></li> -->
-					<li  ng-click="changeLang('vi')"><a href=""><img src="asset/image/vi.gif"></a></li>
+					<li ng-click="changeLang('eng')"><a href=""><img src="asset/image/en.gif"></a></li>
+					<li ng-click="changeLang('vi')"><a href=""><img src="asset/image/vi.gif"></a></li>
 					<li class="dropdown">
 						<a href="" class="dropdown-toggle" data-toggle="dropdown"><b ng-bind="username"></b><b class="caret"></b></a>
 						<ul class="dropdown-menu">
